--- a/package.json
+++ b/package.json
@@ -4,11 +4,11 @@
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve --mode dev",
-    "serve-prod": "vue-cli-service serve --mode prod",
     "build": "vue-cli-service build --mode test",
-    "build-prod": "vue-cli-service build --mode prod",
     "test:unit": "vue-cli-service test:unit",
-    "analy": "vue-cli-service build --report"
+    "analy": "vue-cli-service build --report",
+    "build-prod": "vue-cli-service build --mode prod",
+    "serve-prod": "vue-cli-service serve --mode prod"
   },
   "dependencies": {
     "axios": "^0.19.0",
@@ -33,6 +33,8 @@
     "compression-webpack-plugin": "^3.1.0",
     "less": "^3.0.4",
     "less-loader": "^5.0.0",
+    "style-resources-loader": "^1.3.2",
+    "vue-cli-plugin-style-resources-loader": "^0.1.4",
     "vue-template-compiler": "^2.6.10"
   }
 }
