--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "core-js": "^3.4.3",
     "normalize.css": "^8.0.1",
     "postcss-pxtorem": "^5.1.1",
-    "vee-validate": "^2.0.0-rc.25",
+    "vee-validate": "^3.3.8",
     "vue": "^2.6.10",
     "vue-i18n": "^8.16.0",
     "vue-router": "^3.1.3",
